<resources>
    <string name="app_name">UselessActions</string>
    <string name="passport_first_name">Passport first name</string>
    <string name="passport_last_name">Passport last name</string>
    <string name="birthday">Birthday</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="mail">Mail</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="house">House</string>
    <string name="secret_question">Secret question</string>
    <string name="secret_answer">Secret answer</string>
    <string name="phone_number">Phone number</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="cool">Ok, all data is correct. Please, wait while we connecting to our servers...</string>
</resources>
