<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:paddingTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/passport_first_name"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/passport_last_name"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/birthday"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/login"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/mail"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/repeat_password"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/secret_question"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/answer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/secret_answer"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/phone_number"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/country"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/city"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/street"
                    android:layout_marginBottom="8dp"/>

            <EditText
                    android:id="@+id/house"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/house"
                    android:layout_marginBottom="8dp"/>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"/>

                <Button
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>